[gd_scene load_steps=17 format=3 uid="uid://bpsjpptboyfvh"]

[ext_resource type="Script" uid="uid://ctfjte2u84u84" path="res://enemies/sniper_enemy.gd" id="1_78735"]
[ext_resource type="Texture2D" uid="uid://b2djyk3otuq3i" path="res://assets/enemy/sniper_enemy/sniper_enemy_idle_body.png" id="1_rd4f2"]
[ext_resource type="Texture2D" uid="uid://d3wwf5081vt31" path="res://assets/enemy/sniper_enemy/sniper_enemy_idle_arm.png" id="2_ookx4"]
[ext_resource type="Script" uid="uid://bljn1qhbvkg5i" path="res://Management/composition_scenes/health_component.gd" id="3_vrj2e"]
[ext_resource type="Script" uid="uid://bxqcqvm4n7ver" path="res://Management/states/sniper_enemy/sniper_enemy_idle.gd" id="5_6fqx2"]
[ext_resource type="Script" uid="uid://bpwgu5dutdh7m" path="res://Management/states/sniper_enemy/sniper_enemy_attack.gd" id="6_ut57s"]
[ext_resource type="Script" uid="uid://4r07a8nawfmm" path="res://Management/states/sniper_enemy/sniper_enemy_death.gd" id="7_4ibfx"]
[ext_resource type="PackedScene" uid="uid://2bdikhijltvv" path="res://Management/life_label.tscn" id="8_ev87a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8gqt6"]
radius = 5.0
height = 50.0

[sub_resource type="Animation" id="Animation_dgjpk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("laser:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.156863)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_j67xn"]
resource_name = "attack_prep"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("laser:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.156863), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12.0, 1.0]
}

[sub_resource type="Animation" id="Animation_wdlal"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("laser:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.156863)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_og8hr"]
_data = {
&"RESET": SubResource("Animation_dgjpk"),
&"attack_prep": SubResource("Animation_j67xn"),
&"idle": SubResource("Animation_wdlal")
}

[sub_resource type="Animation" id="Animation_e023m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body_texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arm_texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5h54s"]
resource_name = "hit"
length = 0.0833417
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body_texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arm_texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3ft7"]
_data = {
&"RESET": SubResource("Animation_e023m"),
&"hit": SubResource("Animation_5h54s")
}

[node name="sniper_enemy" type="CharacterBody2D" node_paths=PackedStringArray("health_component") groups=["enemy"]]
collision_layer = 2
collision_mask = 45
script = ExtResource("1_78735")
element = "fire"
health_component = NodePath("HealthComponent")

[node name="body_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -25)
shape = SubResource("CapsuleShape2D_8gqt6")

[node name="laser" type="Line2D" parent="."]
position = Vector2(-0.0630628, -18.261)
points = PackedVector2Array(0.141261, -13.7389, -159.858, -14.1299)
width = 1.0
default_color = Color(1, 0, 0, 0.156863)
round_precision = 1

[node name="body_texture" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_rd4f2")

[node name="arm_texture" type="Sprite2D" parent="."]
position = Vector2(0, -32)
rotation = -3.14159
scale = Vector2(1, -1)
texture = ExtResource("2_ookx4")

[node name="RayCast" type="RayCast2D" parent="arm_texture"]
target_position = Vector2(-3072, -0.0155754)
collision_mask = 32805

[node name="proj_spawn" type="Marker2D" parent="arm_texture"]
position = Vector2(-32, 5.72205e-06)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="target_position" type="Marker2D" parent="arm_texture"]
position = Vector2(-3072, -0.0155773)

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("attack_timer")]
script = ExtResource("3_vrj2e")
max_health = 10.0
max_poise = 300.0
attack_timer = NodePath("../attack_timer")

[node name="HSM" type="LimboHSM" parent="."]

[node name="SniperEnemyIdle" type="LimboState" parent="HSM" node_paths=PackedStringArray("parent", "laser", "raycast", "attack_timer", "animation")]
script = ExtResource("5_6fqx2")
parent = NodePath("../..")
laser = NodePath("../../laser")
raycast = NodePath("../../arm_texture/RayCast")
attack_timer = NodePath("../../attack_timer")
animation = NodePath("../../animation")

[node name="SniperEnemyAttack" type="LimboState" parent="HSM" node_paths=PackedStringArray("parent", "proj_spawn", "target_position", "animation", "attack_timer")]
script = ExtResource("6_ut57s")
parent = NodePath("../..")
proj_speed = 10.0
proj_spawn = NodePath("../../arm_texture/proj_spawn")
target_position = NodePath("../../arm_texture/target_position")
proj_tween_duration = 8.0
animation = NodePath("../../animation")
attack_timer = NodePath("../../attack_timer")

[node name="SniperEnemyDeath" type="LimboState" parent="HSM" node_paths=PackedStringArray("parent")]
script = ExtResource("7_4ibfx")
parent = NodePath("../..")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_og8hr")
}

[node name="hit_modulate" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n3ft7")
}

[node name="attack_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="center_damage_area" type="Marker2D" parent="."]
position = Vector2(0, -32)

[node name="Label" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("8_ev87a")]
offset_left = -29.0
offset_top = -82.0
offset_right = 27.0
offset_bottom = -59.0
parent = NodePath("..")

[connection signal="animation_finished" from="animation" to="HSM/SniperEnemyAttack" method="_on_animation_finished"]
[connection signal="animation_finished" from="hit_modulate" to="." method="_on_hit_modulate_animation_finished"]
